# top-video-generator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .tombi.toml  .zshrc.local  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.build.yml  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  top_music.log.2026-03-27
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  copilot-settings.md
.github/agents/: cto.agent.md  design.agent.md  solution-architect.agent.md
.github/instructions/: web.instructions.md
.github/skills/docker-best-practices/: LICENSE.txt  SKILL.md
.github/skills/hexagonal-architecture-video-publish/: SKILL.md
.github/skills/jinja2-atomic-design/: ADVANCED_PATTERNS.md  QUICK_REFERENCE.md  SKILL.md
.github/skills/python-async-patterns/: SKILL.md
.github/skills/python-env/: SKILL.md
.github/skills/python-fastapi-patterns/: SKILL.md
.github/skills/python-observability-patterns/: SKILL.md
.github/skills/python-resilience-patterns/: SKILL.md
.github/skills/python-testing-respx/: SKILL.md
.github/skills/python-typing-patterns/: SKILL.md
.github/skills/tinyflux-time-series/: SKILL.md
.github/skills/uv-package-manager/: SKILL.md
.github/skills/video-processing-migration/: SKILL.md
.github/workflows/: ci.yml  docker-publish.yml
.opencode/: rules.md
.opencode/agents/: cto.md  dba.md  design.md  solution-architect.md  sysadmin.md
cloudflare_worker/legal/src/: privacy_policy.js  terms_conditions.js
src/: db_client.py  instagram_client.py  logger.py  script_fetch_yt_data.py  script_generate_publish_top_video.py  script_generate_vertical_publish_top_video.py  settings.py  spotify_client.py  tiktok_client.py  video_downloader.py  video_processing.py  worker_factory.py  worker_post_process_video.py  yt_client.py
src/adapters/: __init__.py  horizontal_video_pipeline.py  instagram_adapter.py  instagram_integration_checker.py  instagram_publisher.py  instagram_video_verifier.py  spotify_integration_checker.py  spotify_playlist_updater.py  tiktok_integration_checker.py  tiktok_publisher.py  vertical_video_pipeline.py  video_publish_executor.py  youtube_adapter.py  youtube_integration_checker.py  youtube_publisher.py  youtube_source.py  youtube_video_verifier.py  youtube_weekly_uploader.py
src/application/: authorize_use_case.py  check_platform_connection_use_case.py  fetch_data_use_case.py  fetch_top_videos_use_case.py  fetch_trending_use_case.py  get_admin_task_status_use_case.py  get_operational_metrics_use_case.py  get_setup_page_use_case.py  get_top_videos_dashboard_use_case.py  publish_vertical_use_case.py  publish_video_use_case.py  trigger_admin_task_use_case.py  verify_published_videos_use_case.py
src/application/workers/: __init__.py  factory.py  post_processor.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  exceptions.py  models.py  ports.py  utils.py
src/domain/services/: __init__.py  scoring_service.py  video_metadata_service.py
src/entrypoints/: __init__.py  api_server.py  fetch_data.py  migrate_legacy_data.py  migrate_release_kind.py  publish_vertical.py  publish_video.py  scheduler.py  scheduler_healthcheck.py
src/entrypoints/workers/: post_processor.py
src/infrastructure/: __init__.py  integration_checker_registry.py  publisher_registry.py
src/infrastructure/social/: __init__.py  instagram_client.py  spotify_client.py  spotipy_exceptions.py  ssl_context_factory.py  tiktok_client.py  tiktok_uploader_client.py
src/infrastructure/storage/: __init__.py  auth_repository.py  operational_metrics_repository.py  publisher_state_repository.py  release_repository.py  spotify_token_cache.py  task_run_state_repository.py  timeseries_repository.py  video_repository.py
src/infrastructure/video/: __init__.py  asset_manager.py  compositor.py  downloader.py  moviepy_compat.py  renderer.py  thumbnail_generator.py
src/infrastructure/youtube/: __init__.py  api_client.py  auth_manager.py  client.py  downloader.py  schemas.py  uploader.py  yt_client.py  yt_fake_client.py
src/shared/: __init__.py  atomic_storage.py  execution_lock.py  log_utils.py  logging.py  utils.py
src/utils/: __init__.py  retry.py
src/web/: dependencies.py  main.py  state.py  viewmodels.py
src/web/routes/: __init__.py  admin.py  auth.py  ops.py  pages.py
src/web/static/: admin.css  styles.css
src/web/templates/: base.html  index.html  macros.html  setup.html
tests/integration/entrypoints/: __init__.py  test_scheduler.py
tests/integration/storage/: __init__.py  test_auth_repository.py  test_release_repository.py  test_timeseries_repository.py  test_video_repository.py
tests/integration/video/: __init__.py  test_asset_manager.py  test_video_processing_current.py
tests/unit/adapters/: test_instagram_video_verifier.py  test_integration_checkers_error_handling.py  test_protocol_compliance.py  test_publishers.py  test_spotify_integration_checker.py  test_spotify_playlist_updater.py  test_tiktok_integration_checker.py  test_video_pipeline_adapters.py  test_youtube_source.py  test_youtube_video_verifier.py
tests/unit/application/: test_authorize_use_case.py  test_check_platform_connection_use_case.py  test_data_resilience.py  test_fetch_data_use_case.py  test_fetch_top_videos_use_case.py  test_fetch_trending_use_case.py  test_get_admin_task_status_use_case.py  test_get_operational_metrics_use_case.py  test_get_setup_page_use_case.py  test_get_top_videos_dashboard_use_case.py  test_publish_vertical_use_case.py  test_publish_video_use_case.py  test_trigger_admin_task_use_case.py  test_verify_published_videos_use_case.py
tests/unit/config/: __init__.py  test_settings.py
tests/unit/domain/: __init__.py  test_scoring_service.py  test_video_metadata_service.py
tests/unit/entrypoints/: __init__.py  test_api_server.py  test_fetch_data.py  test_fetch_data_refactored.py  test_logging_bootstrap.py  test_migrate_legacy_data.py  test_migrate_release_kind.py  test_post_processor.py  (+3 more)
(+103 files in other folders)
