[project]
name = "top-video-generator"
version = "1.0.0"
requires-python = ">=3.12"
readme = "README.md"
authors = [
  {name = "olidroide",email = "top-video-generator@olidroide.es"},
]
maintainers = [
  {name = "olidroide", email = "top-video-generator@olidroide.es"}
]
keywords = ["youtube","top","video"]
dependencies = [
  "fastapi==0.115.12",
  "pydantic-settings==2.9.1",
  "jinja2==3.1.6",
  "uvicorn==0.34.3",
  "itsdangerous==2.1.2",
  "structlog==23.1.0",
  "python-dotenv==1.0.0",
  "aiohttp[speedups]==3.12.9",
  "aiofiles==24.1.0",
  "moviepy==1.0.3",
  "pillow==9.5.0",
  "segno==1.5.2",
  "millify==0.1.1",
  "isodate==0.6.1",
  "emoji-country-flag==1.3.2",
  "tinyflux==0.4.0",
  "tinydb==4.8.2",
  "yt-dlp==2025.8.11",
  "google-api-python-client==2.91.0",
  "google-auth-oauthlib==1.0.0",
  "google-auth==2.21.0",
  "google-auth-httplib2==0.1.0",
  "instagrapi==2.2.1",
  "pyzmq>=26.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.11.9",
  "ty==0.0.16",
  "pytest==8.3.5",
  "pytest-asyncio==0.26.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
