[project]
name = "top-video-generator"
version = "1.0.0"
description = "Automated video pipeline with Hexagonal Architecture"
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "olidroide", email = "top-video-generator@olidroide.es" },
]
keywords = ["youtube", "top", "video", "automation", "hexagonal"]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.4.0",
    "pydantic[email]>=2.0.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.30.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "aiohttp[speedups]>=3.9.0",
    "aiofiles>=24.0.0",
    "moviepy>=1.0.3",
    "pillow>=10.0.0",
    "segno>=1.5.0",
    "millify>=0.1.1",
    "isodate>=0.6.1",
    "emoji-country-flag>=1.3.2",
    "tinyflux>=0.4.0",
    "tinydb>=4.8.0",
    "yt-dlp>=2025.0.0",
    "google-api-python-client>=2.91.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.21.0",
    "google-auth-httplib2>=0.1.0",
    "instagrapi>=2.1.0",
    "pyzmq>=26.0.0",
    "tenacity>=9.0.0",
    "cryptography>=42.0.0",
]

# Entry points para ejecutar con 'uv run'
[project.scripts]
fetch-data = "src.script_fetch_yt_data:main"
publish-vertical = "src.script_generate_vertical_publish_top_video:main"
api-server = "src.web.main:start"


[dependency-groups]
dev = [
  "ruff>=0.4.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.10.0",
  "respx>=0.21.0",
  "ty>=0.0.16",
]


[tool.ruff]
line-length = 110
target-version = "py313"
lint.select = ["E", "F", "I", "N", "UP", "ASYNC", "S"]
lint.ignore = ["S101"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
